export interface Qualification {
    idCode: string;
    qualificationName: string;
}